--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "body-parser": "^2.2.0",
     "express": "^5.1.0",
     "handlebars": "^4.7.8",
-    "mongodb": "^6.16.0"
+    "mongodb": "^6.16.0",
+    "prom-client": "^14.2.0"
   }
 }
