--- a/promtail-config.yml
+++ b/promtail-config.yml
@@ -1,11 +1,18 @@
+server:
+  http_listen_port: 9080
+  grpc_listen_port: 0
+
+positions:
+  filename: /tmp/positions.yaml
+
 clients:
   - url: http://loki:3100/loki/api/v1/push
 
 scrape_configs:
-- job_name: docker
-  static_configs:
-  - targets:
-      - localhost
-    labels:
-      job: dockerlogs
-      __path__: /var/lib/docker/containers/*/*.log
+  - job_name: honeypot_logs
+    static_configs:
+      - targets:
+          - localhost
+        labels:
+          job: honeypot
+          __path__: /var/log/honeypot.log
